# computational-semantics

./: .gitignore  CHANGELOG.md  LICENSE  README.md  compsem.cabal  kb.txt
.github/workflows/: ci.yml
app/: Main.hs  PredLogicFuncs.hs  PredLogicParser.hs  PredLogicTypes.hs  PropLogicFuncs.hs  PropLogicParser.hs
inference-engine/: Main.hs
lib/: ParseTools.hs  PredLogicFuncs.hs  PredLogicParser.hs  PredLogicTypes.hs  PropLogicFuncs.hs  PropLogicParser.hs  PropLogicTypes.hs
tests/: MainTest.hs  PredLogicTest.hs  PropLogicTest.hs  TestTypes.hs
