cabal-version:      3.0
name:               compsem
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             adueck
maintainer:         adueck@users.noreply.github.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable compsem
    import:           warnings
    main-is:          Main.hs
    other-modules:  PropLogicParser,
        PropLogicTypes,
        PropLogicFuncs,
        PredLogicTypes,
        PredLogicParser,
        PredLogicFuncs
    build-depends:    base ^>=4.19.1.0,
        parsec,
        mtl,
        HUnit
    hs-source-dirs:   app
    default-language: GHC2021

-- test-suite tests
--     type: exitcode-stdio-1.0
--     main-is: PredLogicTest.hs
--     build-depends: base ^>=4.19.1.0,
--         HUnit,
--         PredLogicParser
--     hs-source-dirs: tests
--     default-language: Haskell2010
