cabal-version:      3.0
name:               compsem
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             adueck
maintainer:         adueck@users.noreply.github.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

executable inference-engine
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   inference-engine
    default-language: GHC2021

executable compsem
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0,
        compsem-lib,
        parsec,
        mtl
    hs-source-dirs:   app
    default-language: GHC2021

library compsem-lib
    import:           warnings
    exposed-modules: PropLogicParser,
        PropLogicTypes,
        PropLogicFuncs,
        PredLogicTypes,
        PredLogicParser,
        PredLogicFuncs,
        ParseTools
    build-depends:    base ^>=4.19.1.0,
        parsec,
        mtl
    hs-source-dirs:   lib
    default-language: GHC2021

test-suite tests
    type: exitcode-stdio-1.0
    main-is: MainTest.hs
    build-depends:    base ^>=4.19.1.0,
        compsem-lib,
        HUnit,
        parsec,
        mtl
    other-modules: TestTypes,
        PredLogicTest,
        PropLogicTest
    hs-source-dirs: tests
    default-language: GHC2021

